syntax = "proto3";

import "scalapb/scalapb.proto";

option java_multiple_files = true;
option java_package = "shopping.cart.proto";

package shoppingcart;

option (scalapb.options) = {
    single_file: true
    preamble: "sealed trait ShoppingCartMessage extends scalapb.GeneratedMessage"
    preamble: "sealed trait ShoppingCartCommand extends ShoppingCartMessage"
    preamble: "sealed trait ShoppingCartQuery extends ShoppingCartMessage"
    preamble: "sealed trait ShoppingCartResponse extends ShoppingCartMessage"
    lenses: true
    retain_source_code_info: true
};
// gRPC definition for ShoppingCartService



service ShoppingCartService {

    rpc AddItem (AddItemRequest) returns (Cart) {}
    rpc UpdateItem (UpdateItemRequest) returns (Cart) {}

    rpc Checkout (CheckoutRequest) returns (Cart) {}
    rpc GetCart (GetCartRequest) returns (Cart) {}

    rpc GetItemPopularity(GetItemPopularityRequest) returns (GetItemPopularityResponse) {}
}




message AddItemRequest {
    option (scalapb.message).extends = "ShoppingCartCommand";
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
    bytes random_payload = 4;
}

message UpdateItemRequest {
    option (scalapb.message).extends = "ShoppingCartCommand";
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
    bytes random_payload = 4;
}


message CheckoutRequest {
    option (scalapb.message).extends = "ShoppingCartCommand";
    string cartId = 1;
    bytes random_payload = 4;
}

message GetCartRequest {
    option (scalapb.message).extends = "ShoppingCartQuery";
    string cartId = 1;
}

message Cart {
    repeated Item items = 1;
    bool checkedOut = 2;
}


message Item {
    string itemId = 1;
    int32 quantity = 2;
}


message GetItemPopularityRequest {
    option (scalapb.message).extends = "ShoppingCartQuery";
    string itemId = 1;
}

message GetItemPopularityResponse {
    option (scalapb.message).extends = "ShoppingCartResponse";
    string itemId = 1;
    int64 popularityCount = 2;
}

